
   * clean up return values in the API and qualify exceptions.  Include the source
     module name in messages, and provide proper feedback conditionals

   * update 'expand' and 'attach' to take an atom name as well as an element symbol

   * complete first-round test-cases.

   * complete matrix-based object translation and rotation

   * place feedback conditionals around all error output.

Main Goals for 1.0 Release

   * Side-by-side stereo support: cross-eye and wall-eye

   * MOL2 and CML file formats

   * Generalized volumetric rendering: (1) mesh (2) solid (3) colormaps

   * Integrated tutorial/demonstration system

   * Fully consistent API (defined and correct return values)

   * Complete GLUT independence (internal character sets)

   * Basic building support for biological polymers & small molecules
     with and w/o hydrogens

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer atoms, etc).
     sometimes it just fails period
  

Changes up to 0.75

   * enabled automatic completion in the tcl/tk command window

   * altered settings for dot representation

   * created stop_on_exception and raise_exceptions settings.
     WARNING: stop_on_exceptions is NOT set by default (this is so that
     log files which contain errors will continue to function).

   * gutted cmd.py, and created a bunch of sub-modules which contain the
     code previously in cmd.py.  
   
   * superposition bugs fixed with multi-state objects (fit and intra_fit)

   * cmd.set_key can now be used to redefine ALT and CTRL keys in addition
     to function keys and other specials.

Changes up to 0.74

   * very minor bug/doc fixes

Changes up to 0.73

   * improved fragment and residue building capabilities

Changes up to 0.72

   * fixed some logging issues with dragging pieces

   * now possible to create empty objects, fixed mutagenesis wizard in response
 
   * all readable files are shown by default in the Tkinter file dialogs.
