@@ -34,7 +34,7 @@ void PParse(char *str);
 
 int PAlterAtom(AtomInfoType *at,char *expr,int read_only,char *model,int index);
 int PLabelAtom(AtomInfoType *at,char *expr,int index);
-int PAlterAtomState(float *v,char *expr,int read_only);
+int PAlterAtomState(float *v,char *expr,int read_only,AtomInfoType *at);
 
 #define cPLog_pml_lf    0
 #define cPLog_pml       1
